# maki

./: AGENTS.md  Cargo.toml  README.md  justfile
.config/: nextest.toml
docs/: compact-history-integrity-design.md  compact-history-integrity-implementation.md  stale-task-state-design.md  stale-task-state-implementation.md  task-token-progress-design.md  task-token-progress-implementation.md
maki-agent/src/: headless.rs  lib.rs  permissions.rs  types.rs
maki-agent/src/agent/: compaction.rs  history.rs  run.rs  tool_dispatch.rs
maki-agent/src/mcp/: config.rs  (+1 more)
maki-config/: Cargo.toml
maki-config/src/: lib.rs  providers.rs
maki-docgen/src/: gen_config.rs  gen_lua_api.rs  gen_providers.rs  gen_tools.rs
maki-interpreter/src/: runner.rs
maki-lua/: Cargo.toml
maki-lua/src/: docs.rs  language.rs  lib.rs  loader.rs  runtime.rs
maki-lua/tests/: batch_policy.rs  events_slots.rs  plugin_host.rs  real_plugins_restore.rs  task_policy.rs
maki-providers/: Cargo.toml
maki-providers/src/: lib.rs  model.rs  provider.rs  tier_map.rs  types.rs
maki-providers/src/providers/: custom.rs  deepseek.rs  dynamic.rs  google.rs  llama_cpp.rs  local.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  opencode.rs  openrouter.rs  synthetic.rs  tensorx.rs  zai.rs
maki-providers/src/providers/anthropic/: bedrock.rs  mod.rs
maki-providers/src/providers/copilot/: auth.rs  mod.rs
maki-providers/src/providers/openai/: auth.rs  mod.rs  platform.rs  responses.rs
maki-providers/src/providers/zai/: mod.rs
maki-storage/src/: sessions.rs
maki-ui/: Cargo.toml
maki-ui/benches/: splash.rs
maki-ui/src/: chat.rs  event_loop.rs  lib.rs  storage_writer.rs  terminal.rs  theme.rs
maki-ui/src/agent/: agent_loop.rs  mod.rs
maki-ui/src/app/: mod.rs  queue.rs  session.rs  shell.rs  tests.rs  view.rs
maki-ui/src/components/: command.rs  file_picker.rs  keybindings.rs  list_picker.rs  login_picker.rs  lua_float.rs  lua_select.rs  mod.rs  modal.rs  model_picker.rs  plan_form.rs  rewind_picker.rs  scrollbar.rs  theme_picker.rs  tool_display.rs
maki-ui/src/components/messages/: mod.rs  render.rs  tests.rs
plugins/bash/: init.lua
plugins/batch/: init.lua
plugins/code_execution/: init.lua
plugins/edit/: init.lua
plugins/glob/: init.lua
plugins/grep/: init.lua
plugins/index/: indexer.lua  init.lua
plugins/lib/: list_picker.lua
plugins/memory/: init.lua
plugins/question/: init.lua
plugins/read/: init.lua
plugins/sessions/: init.lua
plugins/skill/: init.lua  plugin_dev.lua  plugin_dev_reference.lua
plugins/task/: init.lua
plugins/todo_write/: init.lua
plugins/webfetch/: init.lua
plugins/websearch/: init.lua
plugins/write/: init.lua
site/: demo.cast  index.html
src/: cli.rs  print.rs  sdk_mode.rs
src/cmd/: acp.rs  mod.rs  subcmd.rs  tui.rs
(+33 files in other folders)
