[package]
name = "maki-config"
version.workspace = true
edition.workspace = true

[dependencies]
maki-config-macro = { workspace = true }
maki-storage = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
