[package]
name = "maki-providers"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
maki-storage = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
smol = { workspace = true }
flume = { workspace = true }
futures-lite = { workspace = true }
isahc = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
wait-timeout = { workspace = true }
fastrand = { workspace = true }
maki-config = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
