[package]
name = "maki-ui"
version.workspace = true
edition.workspace = true

[dependencies]
maki-agent = { workspace = true }
maki-config = { workspace = true }
maki-highlight = { workspace = true }
maki-providers = { workspace = true }
maki-lua = { workspace = true }
maki-storage = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
syntect = { workspace = true }
unicode-width = { workspace = true }
serde_json = { workspace = true }
arboard = { workspace = true }
jiff = { workspace = true }
smol = { workspace = true }
flume = { workspace = true }
async-lock = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
arc-swap = { workspace = true }
getrandom = { workspace = true }
futures-lite = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
nucleo = { workspace = true }
nucleo-matcher = { workspace = true }
ignore = { workspace = true }
async-process = { workspace = true }
libc = { workspace = true }
strum = { workspace = true }
notify = { workspace = true }
tempfile = { workspace = true }
shell-words = { workspace = true }

[features]
demo = []

[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "splash"
harness = false
